fix(notes): notes bug fix
- notes are going into wrong table
- remove the wrong notes table
- rewrite the notes model
- create lessons api
